--- a/VirtualShop/VirtualShop/Views/Home/Index.cshtml
+++ b/VirtualShop/VirtualShop/Views/Home/Index.cshtml
@@ -1,31 +1,44 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model IEnumerable<VirtualShop.Models.Book>
+
+@{
+    ViewBag.Title = "Libros para todos";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="jumbotron" style="background-image: url('/Content/Images/jumbotron-getstarted.jpg');">
+    <h1 style="color:cadetblue">Libros para todos</h1>
+    <p class="lead">Venta de libros.</p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+@{
+    int books = 0;
+
+    foreach (var item in Model)
+    {
+        if ((books % 3) == 0)
+        {
+            if (books > 0)
+            {
+                @Html.Raw(String.Format("</div><br/>"))
+            }
+
+            @Html.Raw(String.Format("<div class=\"row\">"))
+        }
+
+        <div class="col-md-4 text-center">
+            <img alt="@Html.DisplayFor(modelItem => item.name)" src="~/Content/Images/@Html.DisplayFor(modelItem => item.image)" class="center-block img-rounded" style="width: 100%; height: 600px;" /><br /><br />
+            @Html.ActionLink("Añadir al Carrito", "AddToCart", "Cart", new { book = item.Id, price = item.price }, null)
+            <h2 style="text-transform: uppercase">@Html.DisplayFor(modelItem => item.name)</h2>
+            <p><strong>Precio: </strong>@Html.DisplayFor(modelItem => item.price)€</p>
+            <p><strong>ISBN: </strong>@Html.DisplayFor(modelItem => item.isbn)</p>
+            <p><strong>Páginas: </strong>@Html.DisplayFor(modelItem => item.pages)</p>
+            <p><strong>Idioma: </strong>@Html.DisplayFor(modelItem => item.language)</p>
+        </div>
+
+        if (books + 1 == Model.Count())
+        {
+            @Html.Raw(String.Format("</div>"))
+        }
+
+        books++;
+    }
+}
